--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.min.js"></script>
     <script src="vehicle.js"></script>
+    <script src="animal.js"></script>
     <script src="sketch.js"></script>
 </body>
 </html>
