--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.min.js"></script>
     <script src="vehicle.js"></script>
     <script src="animal.js"></script>
+    <script src="food.js"></script>
     <script src="sketch.js"></script>
 </body>
 </html>
